--- a/index.html
+++ b/index.html
@@ -98,7 +98,26 @@
               </div>
               </div> 
     </div>
-    
+     <div id="services">
+        <div class="container">
+            <h1 class="sub-title">BLOG</h1>
+            <div class="services-list">
+                <div>
+                    <i class="fa-brands fa-android"></i>
+                    <h1>The Rise of Remote Work: Challenges and Opportunities for Modern Managers.</h1>
+                    <p>
+                        <ul type="*">
+                            <h3>
+                            <li>The rise of remote work presents both challenges and opportunities for modern managers. Embracing a flexible work culture, fostering effective communication and collaboration, and reimagining performance management are essential steps for success in the remote work landscape. By addressing these challenges proactively, managers can create a thriving remote work environment that empowers employees and drives organizational success in the digital age.</li>
+                            <li>Embracing a Flexible Work Culture: For managers, embracing this flexible work culture means trusting employees to deliver results without micromanagement. This opportunity allows managers to focus on outcomes rather than hours worked, fostering a culture of autonomy and empowerment</li>
+                            <li> Communication and Collaboration: Modern managers need to leverage digital tools and platforms to facilitate seamless communication, virtual meetings, and project collaboration. By fostering a culture of open communication, managers can bridge the gap between remote team members and encourage knowledge sharing.</li>
+                        </h3>
+                    </ul>
+                    </p>
+                </div>
+        </div>
+    </div>
+</div>
 
     <!-- ----------CONTACT---------- -->
     <div id="contact">
